Projet total/Assembleur/tests/bad/testfile-bad-label-2.ms
    .section text
.L0:
.L0: